--- a/src/main/resources/templates/html/404.vm
+++ b/src/main/resources/templates/html/404.vm
@@ -28,7 +28,7 @@
             <h1><img alt="" src="images/404-error.png"></h1>
             <h2>page not found</h2>
             <h3>We Couldn’t Find This Page</h3>
-            <a class="back-btn" href="index.html"> Back To Home</a>
+            <a class="back-btn" href="/games/games"> Back To Home</a>
         </section>
 
     </div>
