--- a/src/main/resources/templates/html/TasksQueue.vm
+++ b/src/main/resources/templates/html/TasksQueue.vm
@@ -7,7 +7,7 @@
     <meta name="author" content="ThemeBucket">
     <link rel="shortcut icon" href="#" type="image/png">
 
-    <title>应用列表</title>
+    <title>任务队列列表</title>
 
     <!--data table-->
     <link rel="stylesheet" href="/js/data-tables/DT_bootstrap.css"/>
@@ -80,21 +80,21 @@
         <!-- page heading start-->
         <div class="page-heading">
             <h3>
-                Editable Table
+                $gamesAlias - $devicesAlias
             </h3>
             <ul class="breadcrumb">
-                <li class="active">应用列表</li>
+                <li class="active">任务队列</li>
             </ul>
         </div>
         <!-- page heading end-->
 
         <!--body wrapper start-->
-        <div class="wrapper games">
+        <div class="wrapper tasksQueue">
             <div class="row">
                 <div class="col-sm-12">
                     <section class="panel">
                         <header class="panel-heading">
-                            应用列表
+                            任务队列
                     <span class="tools pull-right">
                         <a href="javascript:;" class="fa fa-chevron-down"></a>
                     ##                        <a href="javascript:;" class="fa fa-times"></a>
@@ -104,36 +104,36 @@
                             <div class="adv-table editable-table ">
                                 <div class="clearfix" style="margin-bottom: 10px;">
                                     <div class="btn-group">
-                                        <a href="#gamesModel" id="add_games" data-toggle="modal" class="btn btn-primary">
-                                            添加应用<i class="fa fa-plus"></i>
+                                        <a href="#tasksQueueModel" id="add_tasksQueue" gamesAlias="$gamesAlias" devicesId="$devicesId" data-toggle="modal" class="btn btn-primary">
+                                            添加任务<i class="fa fa-plus"></i>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="space15"></div>
-                                <table class="table table-striped table-hover table-bordered" id="games_table">
+                                <table class="table table-striped table-hover table-bordered" id="tasksQueue_table">
                                     <thead>
                                     <tr>
                                         <th class="select_all" rowspan="1" colspan="1" style="width: 34px;"></th>
                                         <th>id</th>
-                                        <th>应用名称</th>
-                                        <th>应用别名</th>
+                                        <th>排序</th>
+                                        <th>任务名称</th>
+                                        <th>设备别名</th>
+                                        <th>设备号</th>
                                         <th style="width:30%">操作</th>
                                     </tr>
                                     </thead>
                                     <tbody>
-
 
                                     #foreach($item in $list)
 
                                         <tr class="data_item">
                                             <td><input item_id="$item.id" type="checkbox" name="selectBox"></td>
                                             <td>$item.id</td>
-                                            <td>$item.appName</td>
-                                            <td>$item.alias</td>
+                                            <td>$item.sort</td>
+                                            <td>$item.taskName</td>
+                                            <td>$item.deviceId</td>
+                                            <td>$item.deviceAlias</td>
                                             <td>
-                                                <a class="device_list" href="/games/devices/$item.alias">设备列表</a> |
-                                                <a class="task_list" href="/games/tasks/$item.id">任务列表</a> |
-                                                <a class="edit_" href="#gamesModelEdit" data-toggle="modal">修改</a> |
                                                 <a class="delete" href="javascript:;">删除</a>
                                             </td>
                                         </tr>
@@ -144,48 +144,37 @@
                                 </table>
 
                                 <!-- Modal -->
-                                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="gamesModel" class="modal fade">
+                                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="tasksQueueModel" class="modal fade">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
-                                                <h4 class="modal-title">添加应用</h4>
+                                                <h4 class="modal-title">添加任务</h4>
                                             </div>
                                             <div class="modal-body">
 
-                                                应用名称：<input tyle="text" name="gamesName">
-                                                应用别名：<input tyle="text" name="gamesAlias">
+                                                <div class="insert_type_box" style="margin: 10px 0;">
+                                                    插入类型:
+                                                    <select name="insert_type">
+                                                        <option value="1" >队首</option>
+                                                        <option value="2" selected>队尾</option>
+                                                    </select>
+                                                </div>
+
+                                                <ul class="list-group insert_tasksQueue">
+                                                    <li class="list-group-item" task_id="1">任务名称-任务方法</li>
+                                                </ul>
 
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                                                <button type="button" class="btn btn-success add_games">确定</button>
+                                                <button type="button" class="btn btn-success add_tasksQueue">确定</button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- modal -->
-                                <!-- Modal -->
-                                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="gamesModelEdit" class="modal fade">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
-                                                <h4 class="modal-title">修改应用</h4>
-                                            </div>
-                                            <div class="modal-body">
 
-                                                应用名称：<input tyle="text" name="gamesNameEdit">
-
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                                                <button type="button" class="btn btn-success edit_games">确定</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- modal -->
 
 
                             </div>
