--- a/src/main/resources/templates/html/editable_table.vm
+++ b/src/main/resources/templates/html/editable_table.vm
@@ -46,7 +46,7 @@
 
                 <li class="menu-list"><a href="#"><i class="fa fa-th-list"></i> <span>主菜单</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="/games/table">应用列表</a></li>
+                        <li><a href="/games/games">应用列表</a></li>
                     </ul>
                 </li>
 
