--- a/src/main/resources/templates/html/tasks.vm
+++ b/src/main/resources/templates/html/tasks.vm
@@ -46,7 +46,7 @@
 
                 <li class="menu-list"><a href="#"><i class="fa fa-th-list"></i> <span>主菜单</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="/games/table">应用列表</a></li>
+                        <li><a href="/games/games">应用列表</a></li>
                     </ul>
                 </li>
 
@@ -80,10 +80,10 @@
         <!-- page heading start-->
         <div class="page-heading">
             <h3>
-                Editable Table
+               $gamesName
             </h3>
             <ul class="breadcrumb">
-                <li class="active">应用列表</li>
+                <li class="active">任务列表</li>
             </ul>
         </div>
         <!-- page heading end-->
@@ -104,91 +104,83 @@
                             <div class="adv-table editable-table ">
                                 <div class="clearfix" style="margin-bottom: 10px;">
                                     <div class="btn-group">
-                                        <a href="#gamesModel" id="add_games" data-toggle="modal" class="btn btn-primary">
-                                            添加应用<i class="fa fa-plus"></i>
+                                        <a href="#tasksModel" id="add_tasks" gamesId="$gamesId" data-toggle="modal" class="btn btn-primary">
+                                            添加任务<i class="fa fa-plus"></i>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="space15"></div>
-                                <table class="table table-striped table-hover table-bordered" id="games_table">
+                                <table class="table table-striped table-hover table-bordered" id="tasks_table">
                                     <thead>
                                     <tr>
                                         <th class="select_all" rowspan="1" colspan="1" style="width: 34px;"></th>
                                         <th>id</th>
                                         <th>应用名称</th>
+                                        <th>任务名称</th>
+                                        <th>任务方法</th>
                                         <th style="width:30%">操作</th>
                                     </tr>
                                     </thead>
                                     <tbody>
-
 
                                     #foreach($item in $list)
 
                                         <tr class="data_item">
                                             <td><input item_id="$item.id" type="checkbox" name="selectBox"></td>
                                             <td>$item.id</td>
-                                            <td>$item.appName</td>
+                                            <td>$item.gamesName</td>
+                                            <td>$item.taskName</td>
+                                            <td>$item.methodName</td>
                                             <td>
-                                                <a class="device_list" href="/games/devices">设备列表</a> |
-                                                <a class="task_list" href="/games/tasks">任务列表</a> |
-                                                <a class="edit_" href="#gamesModelEdit" data-toggle="modal">修改</a> |
+                                                <a class="edit_" href="#tasksModelEdit" data-toggle="modal">修改</a> |
                                                 <a class="delete" href="javascript:;">删除</a>
                                             </td>
                                         </tr>
 
                                     #end
-                                    <tr class="data_item">
-                                        <td><input item_id="1" type="checkbox" name="selectBox"></td>
-                                        <td>1</td>
-                                        <td>传奇天下</td>
-                                        <td>
-                                            <a class="device_list" href="javascript:;">设备列表</a> |
-                                            <a class="task_list" href="javascript:;">任务列表</a> |
-                                            <a class="edit_" href="javascript:;">修改</a> |
-                                            <a class="delete" href="javascript:;">删除</a>
-                                        </td>
-                                    </tr>
 
                                     </tbody>
                                 </table>
 
                                 <!-- Modal -->
-                                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="gamesModel" class="modal fade">
+                                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="tasksModel" class="modal fade">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
-                                                <h4 class="modal-title">添加应用</h4>
+                                                <h4 class="modal-title">添加任务</h4>
                                             </div>
                                             <div class="modal-body">
 
-                                                应用名称：<input tyle="text" name="gamesName">
+                                                任务名称：<input tyle="text" name="tasksName">
+                                                方法名称：<input tyle="text" name="methodName">
 
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                                                <button type="button" class="btn btn-success add_games">确定</button>
+                                                <button type="button" class="btn btn-success add_tasks">确定</button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- modal -->
                                 <!-- Modal -->
-                                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="gamesModelEdit" class="modal fade">
+                                <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="tasksModelEdit" class="modal fade">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
-                                                <h4 class="modal-title">修改应用</h4>
+                                                <h4 class="modal-title">修改任务</h4>
                                             </div>
                                             <div class="modal-body">
 
-                                                应用名称：<input tyle="text" name="gamesNameEdit">
+                                                任务名称：<input tyle="text" name="tasksName">
+                                                方法名称：<input tyle="text" name="methodName">
 
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                                                <button type="button" class="btn btn-success edit_games">确定</button>
+                                                <button type="button" class="btn btn-success edit_tasks">确定</button>
                                             </div>
                                         </div>
                                     </div>
