--- a/src/main/resources/templates/html/TasksQueue.vm
+++ b/src/main/resources/templates/html/TasksQueue.vm
@@ -30,11 +30,11 @@
 
         <!--logo and iconic logo start-->
         <div class="logo">
-            <a href="index.html"><img src="/images/logo.png" alt=""></a>
+            <a href="/games/logout"><img src="/images/logo.png" alt=""></a>
         </div>
 
         <div class="logo-icon text-center">
-            <a href="index.html"><img src="/images/logo_icon.png" alt=""></a>
+            <a href="/games/logout"><img src="/images/logo_icon.png" alt=""></a>
         </div>
         <!--logo and iconic logo end-->
 
